# nextcloud-s3-backup

./: .all-contributorsrc  .copier-answers.yml  .flake8  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
docs/source/: conf.py  index.md  installation.md  usage.md
src/nc_s3_backup/: cli.py
src/nc_s3_backup/api/: backup.py  config.py  db.py
tests/: config.yaml  test_api_db.py  test_backup.py  test_cli.py  test_main.py  test_purge.py
