[tool.poetry]
name = "nextcloud-s3-backup"
version = "0.2.0"
description = "Nextcloud S3 primary storage incremental backup"
authors = ["Pierre Verkest <pierreverkest84@gmail.com>"]
license = "Apache Software License 2.0"
readme = "README.md"
repository = "https://github.com/petrus-v/nextcloud-s3-backup"
documentation = "https://nextcloud-s3-backup.readthedocs.io"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
packages = [
    { include = "nc_s3_backup", from = "src" },
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/petrus-v/nextcloud-s3-backup/issues"
"Changelog" = "https://github.com/petrus-v/nextcloud-s3-backup/blob/main/CHANGELOG.md"

[tool.poetry.dependencies]
python = "^3.7"
s3path = {git="https://github.com/petrus-v/s3path.git", branch="master", extras=["factory"]}
psycopg2-binary = "^2.9.5"
pydantic = "^1.10.2"
pyyaml = "^6.0"

[tool.poetry.scripts]
nextcloud-s3-backup = "nc_s3_backup.cli:main"
nextcloud-s3-backup-config = "nc_s3_backup.cli:config_helper"
nextcloud-s3-backup-purge = "nc_s3_backup.cli:purge"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-cov = "^3.0"
freezegun = "^1.2.2"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
myst-parser = ">=0.16"
sphinx = ">=4.0"
sphinx-rtd-theme = ">=1.0"

[tool.semantic_release]
branch = "main"
version_toml = "pyproject.toml:tool.poetry.version"
version_variable = "src/nc_s3_backup/__init__.py:__version__"
build_command = "pip install poetry && poetry build"

[tool.pytest.ini_options]
addopts = "-v -Wdefault --cov=nc_s3_backup --cov-report=term-missing:skip-covered"
pythonpath = ["src"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@overload",
    "if TYPE_CHECKING",
    "raise NotImplementedError",
]

[tool.isort]
profile = "black"
known_first_party = ["nc_s3_backup", "tests"]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
mypy_path = "src/"
no_implicit_optional = true
show_error_codes = true
warn_unreachable = true
warn_unused_ignores = true
exclude = [
    'docs/.*',
    'setup.py',
]

[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true

[[tool.mypy.overrides]]
module = "docs.*"
ignore_errors = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
